[package]
name = "mneme"
version = "0.3.8"
authors = ["John Wilger <john@johnwilger.com>"]
edition = "2024"
description = "An event-sourcing library for Rust projects."
repository = "https://github.com/jwilger/mneme"
license = "MIT"
keywords = ["data", "events", "event-sourcing", "cqrs", "postgresql"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.3.31"
nutype = { version = "0.6.1", features = ["regex", "serde"] }
serde = { version = "1.0.217", features = ["alloc", "derive", "rc", "unstable"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.17", features = ["full"] }
