[package]
name = "mneme"
version = "0.3.8"
authors = ["John Wilger <john@johnwilger.com>"]
edition = "2024"
description = "An event-sourcing library for Rust projects."
repository = "https://github.com/jwilger/mneme"
license = "MIT"
keywords = ["data", "events", "event-sourcing", "cqrs", "postgresql"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "1.10.0"
chrono = { version = "0.4", features = ["serde"] }
eventstore = "4.0.0"
futures = "0.3.31"
nutype = { version = "0.6.1", features = ["regex", "serde"] }
rand = { version = "0.9.0", features = ["small_rng"] }
getrandom = "0.2.12"
serde = { version = "1.0.217", features = ["derive", "unstable"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.13.2", features = ["v4", "serde"] }
tonic = "0.12.3"
